--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="img/logo.png" alt="Logo">
+                <img src="img/Logo.png" alt="main-Logo">
             </a>
             <nav>
                 <i class="fas fa-bars toggle-menu"></i>
@@ -283,13 +283,13 @@
                 <div class="prog-holder">
                     <h4>html 5</h4>
                     <div class="prog">
-                        <span style="width: 95%;" data-progress="95%"></span>
+                        <span style="width: 93%;" data-progress="93%"></span>
                     </div>
                 </div>
                 <div class="prog-holder">
                     <h4>css 3</h4>
                     <div class="prog">
-                        <span style="width: 93%;" data-progress="93%"></span>
+                        <span style="width: 90%;" data-progress="90%"></span>
                     </div>
                 </div>
                 <div class="prog-holder">
